--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,6 @@
 GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
 
 # Optional: Configuration for servers
-# GRPC_SERVER_PORT=50051
-# WS_PROXY_PORT=3001
-# FRONTEND_PORT=80
+GRPC_SERVER_PORT=50051
+WS_PROXY_PORT=3001
+FRONTEND_PORT=80
