--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b tsconfig.json && vite build",
+    "build": "tsc && vite build",
     "lint": "eslint . --config ../eslint.config.mjs",
     "lint:fix": "eslint . --config ../eslint.config.mjs --fix",
     "preview": "vite preview"
@@ -24,6 +24,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "typescript": "^5.8.3",
     "vite": "^6.3.5"
   }
 }
