--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,13 +1,13 @@
-FROM golang:1.22-alpine AS builder
+FROM golang:1.23-alpine AS builder
 
 WORKDIR /app
 
-COPY go.mod go.sum* ./
+COPY ./go.mod ./go.sum ./
 RUN go mod download
 
 COPY . .
 
-RUN go build -o machine-map-server server/main.go
+RUN go build -o stream-machine-map-monitor-server main.go
 
 FROM alpine:latest
 
