--- a/server/ws-proxy/Dockerfile
+++ b/server/ws-proxy/Dockerfile
@@ -1,19 +1,22 @@
-FROM golang:1.22-alpine AS builder
+FROM golang:1.23-alpine AS builder
 
 WORKDIR /app
 
-COPY go.mod go.sum* ./
+COPY go.mod go.sum ./
 RUN go mod download
 
-COPY . .
+COPY proto/ ./proto/
 
-RUN go build -o ws-proxy server/ws-proxy/main.go
+COPY ./ws-proxy/ ./ws-proxy/
+
+WORKDIR /app/ws-proxy
+RUN go build -x -o ws-proxy main.go
 
 FROM alpine:latest
 
 WORKDIR /app
 
-COPY --from=builder /app/ws-proxy .
+COPY --from=builder /app/ws-proxy/ws-proxy .
 
 EXPOSE 3001
 
